<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="vertical"
        android:background="@color/menuColor"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="37dp"
            android:text="@string/registro"
            android:textSize="30dp"
            android:textColor="@color/background_color"/>
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="286dp"
            android:isScrollContainer="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/Name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/my_border"
                android:hint="@string/razon_social"
                android:paddingLeft="10dp"
                android:textColor="@color/border_color"
                android:textColorHint="@color/hint_color" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/RUC"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/my_border"
                android:hint="@string/RUC"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textColor="@color/border_color"
                android:textColorHint="@color/hint_color" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nAccount"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/my_border"
                android:hint="@string/nCuenta"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textColor="@color/border_color"
                android:textColorHint="@color/hint_color" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/address"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/my_border"
                android:hint="@string/direccion"
                android:paddingLeft="10dp"
                android:textColor="@color/border_color"
                android:textColorHint="@color/hint_color" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/my_border"
                android:hint="@string/email"
                android:paddingLeft="10dp"
                android:textColor="@color/border_color"
                android:textColorHint="@color/hint_color" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/item"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/my_border"
                android:hint="@string/rubro"
                android:paddingLeft="10dp"
                android:textColor="@color/border_color"
                android:textColorHint="@color/hint_color" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/numberPhone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/my_border"
                android:hint="@string/numero"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:textColor="@color/border_color"
                android:textColorHint="@color/hint_color" />


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:fontFamily="monospace"
                android:text="@string/textAddmore"
                android:textColor="@color/border_color"
                android:textSize="20dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                app:srcCompat="@color/colorPrimary" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dniCollaborator"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/my_border"
                android:hint="@string/colaborador"
                android:paddingLeft="10dp"
                android:textColor="@color/border_color"
                android:textColorHint="@color/hint_color" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_border"
                    android:text="Registrarse"
                    android:textColor="@color/border_color"
                    tools:layout_editor_absoluteX="88dp"
                    tools:layout_editor_absoluteY="0dp" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/my_border"
                    android:text="Cancelar"
                    android:textColor="@color/border_color"
                    tools:layout_editor_absoluteX="230dp"
                    tools:layout_editor_absoluteY="0dp" />
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>



</RelativeLayout>