<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color">


    <LinearLayout
        android:layout_width="425dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-3dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="25dp"
            android:text="@string/User"
            android:textColor="@color/border_color"
            android:textSize="25dp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="15dp"
            android:text="@string/ingresa"
            android:textColor="@color/border_color"
            android:textSize="20dp" />



        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/my_border"
            android:hint="@string/nDni"
            android:paddingLeft="10dp"
            android:textColor="@color/border_color"
            android:textColorHint="@color/hint_color" />
    </LinearLayout>

    <GridLayout
        android:layout_width="317dp"
        android:layout_height="317dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="1dp"
        android:numColumns="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"
        tools:ignore="MissingConstraints,MissingPrefix">

        <Button
            android:id="@+id/register"
            android:layout_width="79dp"
            android:layout_height="6dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@color/yapeButtons"
            android:elevation="20dp"
            android:lineHeight="1dp"
            android:text="One"
            android:textColor="@color/background_color"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="158dp" />

        <Button
            android:id="@+id/register1"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@color/yapeButtons"
            android:elevation="20dp"
            android:lineHeight="1dp"
            android:text="Two"
            android:textColor="@color/background_color"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="158dp" />
        <Button
            android:id="@+id/register2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@color/yapeButtons"
            android:elevation="20dp"
            android:layout_gravity="fill"
            android:lineHeight="1dp"
            android:text="Three"
            android:textColor="@color/background_color"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="158dp" />


        <Button
            android:id="@+id/register3"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@color/yapeButtons"
            android:elevation="20dp"
            android:lineHeight="1dp"
            android:text="Four"
            android:textColor="@color/background_color"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="158dp" />
        <Button
            android:id="@+id/register4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@color/yapeButtons"
            android:elevation="20dp"
            android:layout_gravity="fill"
            android:lineHeight="1dp"
            android:text="Five"
            android:textColor="@color/background_color"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="158dp" />
        <Button
            android:id="@+id/register5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@color/yapeButtons"
            android:elevation="20dp"
            android:layout_gravity="fill"
            android:lineHeight="1dp"
            android:text="Six"
            android:textColor="@color/background_color"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="158dp" />


        <Button
            android:id="@+id/register6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@color/yapeButtons"
            android:elevation="20dp"
            android:layout_gravity="fill"
            android:lineHeight="1dp"
            android:text="Seven"
            android:textColor="@color/background_color"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="158dp" />
        <Button
            android:id="@+id/register7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@color/yapeButtons"
            android:elevation="20dp"
            android:layout_gravity="fill"
            android:lineHeight="1dp"
            android:text="Eight"
            android:textColor="@color/background_color"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="158dp" />
        <Button
            android:id="@+id/register8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@color/yapeButtons"
            android:elevation="20dp"
            android:layout_gravity="fill"
            android:lineHeight="1dp"
            android:text="Nine"
            android:textColor="@color/background_color"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="158dp" />


        <Button
            android:id="@+id/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="@color/yapeButtons"
            android:elevation="20dp"
            android:lineHeight="1dp"
            android:text="Seven"
            android:textColor="@color/background_color"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="158dp" />
        <Button
            android:id="@+id/register9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@color/yapeButtons"
            android:elevation="20dp"
            android:layout_gravity="fill"
            android:lineHeight="1dp"
            android:text="0"
            android:textColor="@color/background_color"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="158dp" />
        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@color/yapeButtons"
            android:elevation="20dp"
            android:layout_gravity="fill"
            android:lineHeight="1dp"
            android:text="@string/arrow"
            android:textColor="@color/background_color"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="158dp" />

    </GridLayout>


    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="111dp"
        android:layout_marginTop="470dp"
        android:layout_marginLeft="130dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
>

        <TextView
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:text="@string/resgistrate"
            android:textColor="@color/yapeButtons"
            android:textSize="15dp" />


        <TextView
            android:id="@+id/olvideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/olvide"
            android:textColor="@color/yapeButtons"
            android:textSize="15dp" />
    </LinearLayout>



</RelativeLayout>